# simple-server

./: CMakeLists.txt  README.md  client  client.c  messages.db  server  server.c  test_db.py
db/: messages.db
src/: fconfig.ini  messages.db
test/: test_db.py
